bug 604880 - Doom cache-entry if writing data and/or metadata fails. r=bjarne@runitsoft.com, sr=bzbzrsky@mit.edu, a=blocker